day 6 Initial commit: JWT auth, CRUD, Swagger